-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
6.2
-
None
-
-
2136406b4cac2e6db4786170cfa9be5372e27da7 (qt/qtbase/dev)
Integration https://testresults.qt.io/coin/integration/qt/qt5/tasks/web_qt_qt5_1618908361021
Change https://codereview.qt-project.org/c/qt/qt5/+/343461
Failure
FAILED: sccache C:\PROGRA~2\MIB055~1\2019\PROFES~1\VC\Tools\MSVC\1428~1.299\bin\Hostx64\x64\cl.exe /nologo /TP -DQT_CORE_LIB -DQT_NO_DEBUG -DQT_TESTCASE_BUILDDIR=\"C:/Users/qt/work/qt/qtbase_standalone_tests/tests/auto/corelib/kernel/qproperty\" -DQT_TESTCASE_SOURCEDIR=\"/Users/qt/work/qt/qtbase/tests/auto/corelib/kernel/qproperty\" -DUNICODE -DWIN32 -DWIN64 -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_UNICODE -D_WIN64 -Itests\auto\corelib\kernel\qproperty\tst_qproperty_autogen\include -I\Users\qt\work\qt\qtbase\tests\auto\corelib\kernel\qproperty -Itests\auto\corelib\kernel\qproperty -Iinclude -IC:\Users\qt\work\install\include\QtCore -IC:\Users\qt\work\install\include -IC:\Users\qt\work\install\mkspecs\win32-msvc -IC:\Users\qt\work\install\include\QtTest -IC:\Users\qt\work\install\include\QtCore\6.2.0 -IC:\Users\qt\work\install\include\QtCore\6.2.0\QtCore /DWIN32 /D_WINDOWS /GR /Z7 /DNDEBUG -O2 -MD /W3 /EHsc -Zc:__cplusplus -permissive- -utf-8 -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -Zc:referenceBinding -Zc:externConstexpr -Zc:wchar_t -guard:cf -std:c++latest /showIncludes /Fotests\auto\corelib\kernel\qproperty\CMakeFiles\tst_qproperty.dir\tst_qproperty.cpp.obj /Fdtests\auto\corelib\kernel\qproperty\CMakeFiles\tst_qproperty.dir\ /FS -c \Users\qt\work\qt\qtbase\tests\auto\corelib\kernel\qproperty\tst_qproperty.cpp C:\Users\qt\work\install\include\QtCore/qproperty.h(75): error C2182: 'val': illegal use of type 'void' C:\Users\qt\work\install\include\QtCore/qpropertyprivate.h(204): note: see reference to class template instantiation 'QPropertyData' being compiled with [ PropertyType=void ] C:\Users\qt\work\install\include\QtCore/qpropertyprivate.h(226): note: see reference to function template instantiation 'QtPrivate::BindingFunctionVTable eFor(void)' being compiled with [ Callable=tst_QProperty::genericPropertyBinding::, PropertyType=void ] C:\Users\qt\work\install\include\QtCore/qproperty.h(156): note: see reference to variable template 'const QtPrivate::BindingFunctionVTable enericPropertyBinding'::`3'::,void>' being compiled \Users\qt\work\qt\qtbase\tests\auto\corelib\kernel\qproperty\tst_qproperty.cpp(703): note: see reference to function template instantiation rtyBinding>(QMetaType,Functor &&,const QPropertyBindingSourceLocation &)' being compiled with [ Functor=tst_QProperty::genericPropertyBinding:: ] C:\Users\qt\work\install\include\QtCore/qproperty.h(82): error C2182: 'abstract declarator': illegal use of type 'void' C:\Users\qt\work\install\include\QtCore/qproperty.h(83): error C2182: 'abstract declarator': illegal use of type 'void' C:\Users\qt\work\install\include\QtCore/qproperty.h(84): error C2182: 'abstract declarator': illegal use of type 'void' C:\Users\qt\work\install\include\QtCore/qproperty.h(85): error C2182: 'abstract declarator': illegal use of type 'void' ninja: build stopped: subcommand failed.
Using MSVC 16.19.4
https://codereview.qt-project.org/c/qt/qt5/+/343593
| For Gerrit Dashboard: QTBUG-92962 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 344278,4 | Work around MSVC compilation issue | dev | qt/qtbase | Status: MERGED | +2 | 0 |